# oblivious-transfer

./: Cargo.toml
alice/: Cargo.toml
alice/src/: main.rs
bob/: Cargo.toml
bob/src/: main.rs
